examples/kju/negative/arrays/wrong_type_elm.kju
fun kju(): Unit
{
	var ay: [Bool] = new(Bool,5);
	ay[2]=42;
}
